# lox-c

./: .gitignore  CMakeLists.txt  README.md
data/: additions.txt  big_constant.lox  break.lox  closures.lox  condition.lox  constant_global.txt  continue.lox  function.lox  gc_test.lox  loops.lox  native.lox  nested-break.lox  nested-continue.lox  oop.lox  scopes.lox  switch.lox  test.lox  text.lox
include/: chunk.h  compiler.h  debug.h  memory.h  object.h  scanner.h  table.h  test.h  value.h  vm.h
src/: chunk.c  compiler.c  debug.c  main.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
